# hedgehog-Tutorials

./: CMakeLists.txt  Gemfile  LICENSE.txt  _config.yml  about.markdown  index.markdown  readme.md
_includes/: head.html
advanced/tutorial1/: CMakeLists.txt  run_experiment.sh  tutorial1-baseline.cc  tutorial1.cc
advanced/tutorial1/cuda_tasks/: cuda_prefetch_in_gpu.h  cuda_product_task.h
advanced/tutorial1/data/: data_type.h  matrix_block_data.h  unified_matrix_block_data.h
advanced/tutorial1/execution_pipeline/: multi_gpu_exec_pipeline.h
advanced/tutorial1/graph/: unified_computation_graph.h
advanced/tutorial1/state/: output_state.h  partial_computation_state.h  partial_computation_state_manager.h  unified_input_block_state.h
advanced/tutorial1/tasks/: addition_task.h
advanced/tutorial1/utils/: cuda_utils.h
assets/css/: style.scss
cmake-modules/: FindGLOG.cmake  FindHedgehog.cmake  FindNVTX.cmake  FindOpenBLAS.cmake
tutorial1/: CMakeLists.txt  tutorial1.cc
tutorial1/data/: data_type.h  matrix_block_data.h  matrix_data.h  triplet_matrix_block_data.h
tutorial1/task/: hadamard_product.h
tutorial2/: CMakeLists.txt  tutorial2.cc
tutorial2/data/: data_type.h  matrix_block_data.h  matrix_data.h  triplet_matrix_block_data.h
tutorial2/state/: block_state.h
tutorial2/task/: hadamard_product.h  matrix_row_traversal_task.h
tutorial3/: CMakeLists.txt  tutorial3.cc
tutorial3/data/: data_type.h  matrix_block_data.h  matrix_data.h
tutorial3/graph/: parallel_reduction_graph.h
tutorial3/state/: input_block_state.h  output_state.h  partial_computation_state.h  partial_computation_state_manager.h
tutorial3/task/: addition_task.h  final_reduction_task.h  matrix_column_traversal_task.h  matrix_row_traversal_task.h  product_task.h  reduction_task.h  vector_decomposition.h
tutorial4/: CMakeLists.txt  tutorial4.cc
tutorial4/cuda_tasks/: cuda_copy_in_gpu.h  cuda_copy_out_gpu.h  cuda_product_task.h
tutorial4/data/: cuda_matrix_block_data.h  data_type.h  matrix_block_data.h  matrix_data.h
tutorial4/state/: cuda_input_block_state.h  input_block_state.h  output_state.h  partial_computation_state.h  partial_computation_state_manager.h
tutorial4/task/: addition_task.h  matrix_column_traversal_task.h  matrix_row_traversal_task.h  product_task.h
tutorial4/utils/: cuda_utils.h
tutorial5/: CMakeLists.txt  tutorial5.cc
tutorial5/cuda_tasks/: cuda_copy_in_gpu.h  cuda_copy_out_gpu.h  cuda_product_task.h
tutorial5/data/: cuda_matrix_block_data.h  data_type.h  matrix_block_data.h  matrix_data.h
tutorial5/execution_pipeline/: multi_gpu_exec_pipeline.h
tutorial5/graph/: cuda_computation_graph.h
tutorial5/state/: cuda_input_block_state.h  output_state.h  partial_computation_state.h  partial_computation_state_manager.h
tutorial5/task/: addition_task.h  matrix_column_traversal_task.h  matrix_row_traversal_task.h
tutorial5/utils/: cuda_utils.h
tutorial6/: CMakeLists.txt  tutorial6.cc
tutorial6/cuda_tasks/: cuda_copy_in_gpu.h  cuda_copy_out_gpu.h  cuda_product_task.h
tutorial6/data/: cuda_matrix_block_data.h  data_type.h  matrix_block_data.h  matrix_data.h
tutorial6/execution_pipeline/: multi_gpu_exec_pipeline.h
tutorial6/graph/: cuda_computation_graph.h
tutorial6/state/: cuda_input_block_state.h  partial_computation_state.h  partial_computation_state_manager.h
tutorial6/task/: addition_task.h  matrix_column_traversal_task.h  matrix_row_traversal_task.h
tutorial6/utils/: cuda_utils.h
tutorial7/: CMakeLists.txt  tutorial7.cc
tutorial7/graph/: graph_c_int_c_int.h  graph_int_int.h
tutorial7/task/: task_c_int_c_int.h  task_int_int.h  task_int_int_with_can_terminate.h
tutorial8/: CMakeLists.txt  tutorial8.cc
tutorial8/implementor/: multi_priority_queue_receivers.h  priority_queue_receiver.h
tutorial8/state_manager/: priority_queue_state_manager.h
tutorial8/task/: abstract_priority_queue_task.h
tutorials/: .tutorial4.md.swo  .tutorial4.md.swp  preamble.md  tutorial1.md  tutorial2.md  tutorial3.md  tutorial4.md  tutorial5.md  tutorial6.md  tutorial7.md  tutorial8.md  y_profiling.md  z_hh2tohh3.md
utils/tclap/: MultiArg.h  StdOutput.h  ValueArg.h
